# osue_exercise1

./: CMakeLists.txt  README.md  crack_tofix.c
lib/raylib-linux-i386/lib/: libraylib.so.2.0.0
lib/raylib-linux-i386/lib/cmake/raylib/: raylib-config-version.cmake
lib/raylib-linux-i386/lib/pkgconfig/: raylib.pc
lib/raylib-macos/lib/: libraylib.2.dylib
lib/raylib-macos/lib/pkgconfig/: raylib.pc
src/: audio.cpp  audio.h  drm.cpp  drm.h  game.cpp  game.h  gfx.cpp  gfx.h  main.cpp  util.h
visualstudio/: ryskim.sln  ryskim.vcxproj
